--- a/css/main.css
+++ b/css/main.css
@@ -277,9 +277,37 @@ a {
 .hero {
   overflow: hidden;
 }
+@media screen and (min-width: 768px) and (max-width: 1024px) {
+  .hero {
+    margin-top: 90px;
+  }
+}
+@media screen and (max-width: 767px) {
+  .hero {
+    margin-top: 90px;
+  }
+}
 .hero .hero__wrapper {
   display: flex;
   align-items: center;
+}
+@media screen and (min-width: 768px) and (max-width: 1024px) {
+  .hero .hero__wrapper .hero__contents {
+    margin: 0 auto;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+  }
+}
+@media screen and (max-width: 767px) {
+  .hero .hero__wrapper .hero__contents {
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+  }
 }
 .hero .hero__wrapper .hero__contents h2 {
   font-size: 51px;
@@ -289,14 +317,23 @@ a {
   -webkit-background-clip: text;
   -webkit-text-fill-color: transparent;
 }
+@media screen and (max-width: 767px) {
+  .hero .hero__wrapper .hero__contents h2 {
+    font-size: 35px;
+  }
+}
 .hero .hero__wrapper .hero__contents h3 {
   color: #485466;
   font-size: 40px;
   font-weight: 400;
 }
+@media screen and (max-width: 767px) {
+  .hero .hero__wrapper .hero__contents h3 {
+    font-size: 20px;
+  }
+}
 .hero .hero__wrapper .hero__contents h3 span {
   color: #485466;
-  font-size: 40px;
   font-weight: 700;
   line-height: 48px;
 }
@@ -307,6 +344,11 @@ a {
   line-height: 140%;
   width: 431px;
   margin-bottom: 50px;
+}
+@media screen and (max-width: 767px) {
+  .hero .hero__wrapper .hero__contents p {
+    width: 310px;
+  }
 }
 .hero .hero__wrapper .hero__contents a {
   color: #fff;
@@ -320,4 +362,14 @@ a {
 }
 .hero .hero__wrapper #hero__bg {
   margin-right: -500px;
+}
+@media screen and (min-width: 768px) and (max-width: 1024px) {
+  .hero .hero__wrapper #hero__bg {
+    display: none;
+  }
+}
+@media screen and (max-width: 767px) {
+  .hero .hero__wrapper #hero__bg {
+    display: none;
+  }
 }/*# sourceMappingURL=main.css.map */
