--- a/scss/_basics.scss
+++ b/scss/_basics.scss
@@ -5,6 +5,7 @@
 }
 body {
     font-family: "Nunito", sans-serif;
+    background: linear-gradient(-145deg, #fff, #c46de324);
 }
 .container {
     max-width: 1200px;
