--- a/css/main.css
+++ b/css/main.css
@@ -644,4 +644,158 @@ a {
   font-size: 16px;
   font-weight: 400;
   line-height: 140%;
+}
+
+.create {
+  margin-bottom: 155px;
+}
+.create .create__wrapper {
+  display: flex;
+  align-items: center;
+  gap: 200px;
+}
+@media screen and (min-width: 768px) and (max-width: 1024px) {
+  .create .create__wrapper {
+    align-items: center;
+    justify-content: center;
+    flex-direction: column;
+  }
+}
+@media screen and (max-width: 767px) {
+  .create .create__wrapper {
+    align-items: center;
+    justify-content: center;
+    flex-direction: column;
+  }
+}
+.create .create__wrapper img {
+  position: relative;
+  margin-top: -100px;
+  padding: 44px;
+  border-radius: 86px;
+  border: 2px solid #fff;
+  background: rgba(255, 255, 255, 0.15);
+  -webkit-backdrop-filter: blur(15px);
+          backdrop-filter: blur(15px);
+}
+@media screen and (max-width: 767px) {
+  .create .create__wrapper img {
+    width: 100%;
+    display: flex;
+    align-items: center;
+    margin-bottom: -100px;
+  }
+}
+.create .create__wrapper .create__bg {
+  position: absolute;
+  z-index: -1;
+  margin-left: 150px;
+  margin-bottom: -180px;
+  width: 408px;
+  height: 408px;
+  flex-shrink: 0;
+  border-radius: 61px;
+  background: linear-gradient(164deg, rgba(78, 146, 249, 0.25) 10.99%, rgba(195, 129, 219, 0.25) 113.57%);
+}
+@media screen and (min-width: 768px) and (max-width: 1024px) {
+  .create .create__wrapper .create__bg {
+    margin-left: 198px;
+    margin-bottom: 404px;
+  }
+}
+@media screen and (max-width: 767px) {
+  .create .create__wrapper .create__bg {
+    display: none;
+  }
+}
+@media screen and (min-width: 768px) and (max-width: 1024px) {
+  .create .create__wrapper .create__list .create__list-item {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+  }
+}
+@media screen and (max-width: 767px) {
+  .create .create__wrapper .create__list .create__list-item {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+  }
+}
+.create .create__wrapper .create__list .create__list-item h2 {
+  color: #242a33;
+  font-size: 40px;
+  font-weight: 700;
+  line-height: 48px;
+  width: 460px;
+}
+@media screen and (min-width: 768px) and (max-width: 1024px) {
+  .create .create__wrapper .create__list .create__list-item h2 {
+    text-align: center;
+    width: 660px;
+  }
+}
+@media screen and (max-width: 767px) {
+  .create .create__wrapper .create__list .create__list-item h2 {
+    text-align: center;
+    width: 360px;
+    font-size: 29px;
+  }
+}
+.create .create__wrapper .create__list .create__list-item h5 {
+  color: #5a6980;
+  font-size: 16px;
+  font-weight: 400;
+  line-height: 140%;
+  margin-top: 25px;
+  margin-bottom: 25px;
+}
+@media screen and (min-width: 768px) and (max-width: 1024px) {
+  .create .create__wrapper .create__list .create__list-item h5 {
+    text-align: center;
+    width: 550px;
+  }
+}
+@media screen and (max-width: 767px) {
+  .create .create__wrapper .create__list .create__list-item h5 {
+    text-align: center;
+    width: 360px;
+  }
+}
+.create .create__wrapper .create__list .create__list-item p {
+  color: #5a6980;
+  font-size: 16px;
+  font-weight: 400;
+  line-height: 140%;
+  margin-bottom: 48px;
+}
+@media screen and (min-width: 768px) and (max-width: 1024px) {
+  .create .create__wrapper .create__list .create__list-item p {
+    text-align: center;
+    width: 550px;
+  }
+}
+@media screen and (max-width: 767px) {
+  .create .create__wrapper .create__list .create__list-item p {
+    text-align: center;
+    width: 360px;
+  }
+}
+.create .create__wrapper .create__list .create__list-item p span {
+  color: #5a6980;
+  font-size: 16px;
+  font-weight: 700;
+}
+.create .create__wrapper .create__list .create__list-item a {
+  padding: 7px 16px;
+  border-radius: 8px;
+  border: 1px solid var(--Gradient-Primary, #c381db);
+  font-size: 16px;
+  font-weight: 700;
+  background: var(--Gradient-Primary, linear-gradient(113deg, #c381db 0%, #4e92f9 100%));
+  background-clip: text;
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
 }/*# sourceMappingURL=main.css.map */
